// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<DocumentFragment>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider should render a dashed 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 FRyyK border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal type 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal with size default 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal with size lg 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal with size md 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal with size sm 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render vertical type 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical with size default 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical with size lg 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 bGhmfz border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical with size md 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 hhDSpl border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical with size sm 1`] = `
<div>
  <div
    class="Divider-sc-17ehhxk-0 jOzFza border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;
